# brickgame

./: Cargo.toml
assets/config/: config.ron
assets/pic/: upgrade_live.xcf
src/: builder.rs  components.rs  constants.rs  entity.rs  lvl1.ron  main.rs  resource.rs  system.rs
