[package]
name = "brickgame"
version = "0.1.0"
authors = ["emi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
serde = "*"
bevy_asset_ron = "*"
rand = "*"
ron = "*"
lazy_static = "1.4.0"
brickgame_mapgen = { version = "*", path = "../brickgame_mapgen" }